add_executable(trans_parser
    alphabet.cc
    alphabet.h
    corpus.cc
    corpus.h
    tree.h
    logging.cc
    logging.h
    sys_utils.cc
    sys_utils.h
    trainer_utils.cc
    trainer_utils.h
	noisify.cc
	noisify.h
    layer.cc
    layer.h
    main.cc
    train_supervised.cc
    train_supervised.h
    evaluate.cc
    evaluate.h
    #state.h
    #state.cc
    arcstd.cc
    arcstd.h
    arceager.cc
    arceager.h
    archybrid.cc
    archybrid.h
    swap.cc
    swap.h
	system.cc
    system.h
	system_builder.cc
	system_builder.h
    parser.cc
    parser.h
    parser_dyer15.cc
    parser_dyer15.h
    parser_ballesteros15.cc
    parser_ballesteros15.h
	parser_kiperwasser16.cc
	parser_kiperwasser16.h
	parser_builder.cc
	parser_builder.h
	)

if (MSVC)
	target_link_libraries(trans_parser dynet ${LIBS})
else()
	target_link_libraries(trans_parser dynet ${LIBS} z)
endif()
